force-app/main/default/objects/pse__Proj__c/fields/CC_Catch_Ups_Doc__c.field-meta.xml
<CustomField>
    <fullName>CC_Catch_Ups_Doc__c</fullName>
    <description>Documento donde indicar la evolución en los Catch Ups</description>
    <label>Catch Ups Doc</label>
    <type>Url</type>
</CustomField>