force-app/main/default/objects/pse__Proj__c/fields/CC_Trello_Board__c.field-meta.xml
<CustomField>
    <fullName>CC_Trello_Board__c</fullName>
    <description>Url del tablero de trello</description>
    <label>CC Trello Board</label>
    <type>Url</type>
</CustomField>