force-app/main/default/objects/pse__Proj__c/fields/DevOps_Center__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center__c</fullName>
    <formula>HYPERLINK(&apos;https://cloudcoachers.lightning.force.com/sf_devops/DevOpsCenter.app?projectId=&apos; &amp;  DevOps_Project__c , &apos;Go devops center&apos; , &apos;_blank&apos;)</formula>
    <label>DevOps Center</label>
    <type>Text</type>
</CustomField>