force-app/main/default/objects/pse__Proj__c/fields/DevOps_Project__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DevOps Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>DevOps_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>