force-app/main/default/objects/pse__Proj__c/fields/Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>Drive_Folder__c</fullName>
    <inlineHelpText>Link to Drive folder where the documentation is stored</inlineHelpText>
    <label>Drive Folder</label>
    <type>Url</type>
</CustomField>