force-app/main/default/objects/pse__Proj__c/fields/EAC__c.field-meta.xml
<CustomField>
    <fullName>EAC__c</fullName>
    <formula>Total_Hours__c + pse__Scheduled_Hours_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated At Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>