force-app/main/default/objects/pse__Proj__c/fields/Fee_Hours_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Fee_Hours_per_Month__c</fullName>
    <label>Fee (Hours/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>