force-app/main/default/objects/pse__Proj__c/fields/Hours_Exclude_from_Billing__c.field-meta.xml
<CustomField>
    <fullName>Hours_Exclude_from_Billing__c</fullName>
    <label>Hours Exclude from Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>