force-app/main/default/objects/pse__Proj__c/fields/Hours_SF_Report__c.field-meta.xml
<CustomField>
    <fullName>Hours_SF_Report__c</fullName>
    <label>Hours SF Report</label>
    <type>Url</type>
</CustomField>