force-app/main/default/objects/pse__Proj__c/fields/Not_Excluded_Hours__c.field-meta.xml
<CustomField>
    <fullName>Not_Excluded_Hours__c</fullName>
    <formula>Total_Hours__c - Hours_Exclude_from_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Excluded Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>