force-app/main/default/objects/pse__Proj__c/fields/Percent_Subjective_Progress__c.field-meta.xml
<CustomField>
    <fullName>Percent_Subjective_Progress__c</fullName>
    <label>% subjective progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>