force-app/main/default/objects/pse__Proj__c/fields/Percent_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>Percent_Time_Used__c</fullName>
    <description>Percent of Total Hours divided by Planned Hours.</description>
    <formula>Total_Hours__c /  pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Hours divided by Planned Hours.</inlineHelpText>
    <label>Percent Time Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>