force-app/main/default/objects/pse__Proj__c/fields/Price_x_Hour__c.field-meta.xml
<CustomField>
    <fullName>Price_x_Hour__c</fullName>
    <label>Price x Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>