force-app/main/default/objects/pse__Proj__c/fields/Project_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Project_Subtype__c</fullName>
    <label>Project Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Implementation</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>User Training</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Red Account Resolution</fullName>
            </value>
            <value>
                <fullName>Ongoing Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contrato marco (T&amp;M)</fullName>
            </value>
            <value>
                <fullName>FEE/suscripción</fullName>
            </value>
            <value>
                <fullName>Bolsa de horas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>