force-app/main/default/objects/pse__Proj__c/fields/SF_Survey__c.field-meta.xml
<CustomField>
    <fullName>SF_Survey__c</fullName>
    <label>SF Survey</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>