force-app/main/default/objects/pse__Proj__c/fields/Total_Billabled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billabled_Hours__c</fullName>
    <description>Horas totales facturables sin tener en cuenta el estado.</description>
    <label>Total Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>