force-app/main/default/objects/pse__Proj__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Horas totales sin tener en cuenta ningún filtro</description>
    <inlineHelpText>Horas totales sin tener en cuenta ningún filtro. Aparece Saved; Submitted,etc, Facturables y no facturables</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>