force-app/main/default/objects/pse__Proj__c/listViews/Active_Customer_Projects_Time_Material.listView-meta.xml
<ListView>
    <fullName>Active_Customer_Projects_Time_Material</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>Project_Subtype__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>Percent_Time_Used__c</columns>
    <columns>pse__Status_Visual__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>psaws__Actual_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Account__c</field>
        <operation>notEqual</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Billing_Type__c</field>
        <operation>equals</operation>
        <value>Time and Materials</value>
    </filters>
    <filters>
        <field>pse__Is_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Customer Projects - Soportes</label>
</ListView>