force-app/main/default/objects/pse__Proj__c/listViews/Active_Training_Projects.listView-meta.xml
<ListView>
    <fullName>Active_Training_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>pse__Percent_Hours_Complete__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Training Projects</label>
</ListView>