force-app/main/default/objects/pse__Proj__c/listViews/BasicQueueAmazon_Proj.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Proj</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>