force-app/main/default/objects/pse__Proj__c/listViews/Completed_Customer_Projects.listView-meta.xml
<ListView>
    <fullName>Completed_Customer_Projects</fullName>
    <booleanFilter>1 AND 2 AND (3 Or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>Percent_Time_Used__c</columns>
    <columns>pse__Status_Visual__c</columns>
    <columns>pse__Stage__c</columns>
    <columns>SF_Survey__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>Project_Subtype__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Account__c</field>
        <operation>notEqual</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Stage__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Customer Projects</label>
</ListView>