force-app/main/default/objects/pse__Proj__c/listViews/Customer_Projects.listView-meta.xml
<ListView>
    <fullName>Customer_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Planned_Hours__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>Percent_Time_Used__c</columns>
    <columns>pse__Status_Visual__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Billing_Type__c</columns>
    <columns>Project_Subtype__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>pse__Project_ID__c</columns>
    <columns>pse__Project_ID_Chain__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Account__c</field>
        <operation>notEqual</operation>
        <value>Cloud Coachers SL</value>
    </filters>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Is_Template__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active Customer Projects</label>
</ListView>