force-app/main/default/objects/pse__Proj__c/listViews/Internal_Projects.listView-meta.xml
<ListView>
    <fullName>Internal_Projects</fullName>
    <columns>NAME</columns>
    <columns>psaws__Actual_Hours__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Internal_Costs__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Status_Visual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Internal,Self Training,Sales &amp; Marketing</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Internal Projects</label>
</ListView>