force-app/main/default/objects/pse__Proj__c/listViews/Projects_Time_Paid_Off.listView-meta.xml
<ListView>
    <fullName>Projects_Time_Paid_Off</fullName>
    <columns>pse__Current_Time_Period__c</columns>
    <columns>pse__Action_Update_Current_Time_Period__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>NAME</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Is_Billable__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Is_Active__c</columns>
    <columns>pse__Billed__c</columns>
    <columns>pse__Internal_Costs__c</columns>
    <columns>pse__Margin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Paid Time Off</value>
    </filters>
    <label>Projects Paid Time Off</label>
</ListView>