force-app/main/default/objects/pse__Proj__c/listViews/Training_Projects.listView-meta.xml
<ListView>
    <fullName>Training_Projects</fullName>
    <columns>NAME</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Total_Submitted_Hours__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>Training Projects</label>
</ListView>